# ninja-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: .halo
src/ninjacli/: __init__.py  main.py
src/ninjacli/ai/: agent.py  prompts.py
src/ninjacli/cli/: commands.py  tools.py
src/ninjacli/core/: message_history.py
src/ninjacli/ui/: intro.py  logo.py  theme.py
src/ninjacli/utils/: api_management.py
src/utills/: validators.py
