[project]
name = "ninjacli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "readchar>=4.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "twine>=6.2.0",
    "wheel>=0.45.1",
]

[project.scripts]
ninjacli = "ninjacli.main:main"
