[project]
name = "ninjacli"
version = "0.2.1"
description = "Ninja CLI is a high-performance terminal assistant that bridges the gap between natural language and system execution. Powered by state-of-the-art LLMs, it allows you to build, manage, and automate your development workflow using simple conversational commands."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "build>=1.4.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "readchar>=4.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "twine>=6.2.0",
    "wheel>=0.45.1",
]

[project.scripts]
ninjacli = "ninjacli.main:main"
